Fix content not fitting on smaller screens

--- a/src/assets/Waves.css
+++ b/src/assets/Waves.css
@@ -1,5 +1,5 @@
 .waves {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     z-index: -1;
 }
