--- a/src/components/MainNav.module.css
+++ b/src/components/MainNav.module.css
@@ -61,4 +61,9 @@
     flex-direction: row-reverse;
     align-items: flex-start;
   }
+
+  .header {
+    position: sticky;
+    top: 0;
+  }
 }
