--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -6,12 +6,15 @@
   height: 100vh;
   z-index: 20;
   background-color: var(--backdrop-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal {
-  position: fixed;
+  /* position: fixed;
   top: 15vh;
-  left: 20%;
+  left: 20%; */
   width: 60%;
   padding: 1rem;
   border-radius: 14px;
@@ -41,5 +44,12 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .modal {
+    left: 0;
+    width: 100%;
   }
 }
