--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
   box-sizing: border-box;
 }
 
+html {
+  width: fit-content;
+  height: fit-content;
+}
+
 /* Light Color Scheme */
 :root {
 
@@ -263,8 +268,9 @@ body {
   color: var(--color-alpha-500);
   margin: 0;
   font-family: 'Rubik', sans-serif;
-  min-height: 100vh;
-  overflow: hidden;
+  height: 100vh;
+  width: 100%;
+  overflow: scroll;
 }
 
 .dark {
@@ -284,8 +290,8 @@ body {
 .root {
   display: flex;
   flex-direction: row;
-  height: 98vh;
-
+  height: 100%;
+  width: 100%;
 }
 
 ul {
@@ -300,8 +306,8 @@ main {
   flex-grow: 2;
   flex-direction: column;
   justify-content: flex-start;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  /* overflow-x: hidden;
+  overflow-y: scroll; */
 }
 
 @media only screen and (max-width: 768px) {
